[gd_scene load_steps=7 format=3 uid="uid://bjq2xhrpyr3m0"]

[ext_resource type="Script" uid="uid://3wxqme1205qb" path="res://Scenes/Enemies/enemy.gd" id="1_613su"]
[ext_resource type="Texture2D" uid="uid://68rboimd75o" path="res://Assets/UI/UIBundleFree/enemy_health_under.png" id="2_x1rqp"]
[ext_resource type="Texture2D" uid="uid://cjm3fhgqd2n5s" path="res://Assets/UI/UIBundleFree/enemy_health_progress.png" id="3_ubio8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_miwey"]
animations = [{
"frames": [],
"loop": false,
"name": &"attack_d",
"speed": 20.0
}, {
"frames": [],
"loop": false,
"name": &"attack_l",
"speed": 20.0
}, {
"frames": [],
"loop": false,
"name": &"attack_r",
"speed": 20.0
}, {
"frames": [],
"loop": false,
"name": &"attack_u",
"speed": 20.0
}, {
"frames": [],
"loop": false,
"name": &"death",
"speed": 16.0
}, {
"frames": [],
"loop": true,
"name": &"idle_d",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle_l",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle_r",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle_u",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk_d",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"walk_l",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"walk_r",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"walk_u",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l8da7"]
radius = 12.0
height = 42.0

[sub_resource type="CircleShape2D" id="CircleShape2D_u0emo"]
radius = 29.0

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = -1
z_as_relative = false
script = ExtResource("1_613su")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1, 0.957)
sprite_frames = SubResource("SpriteFrames_miwey")
animation = &"walk_u"
autoplay = "walk_r"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_l8da7")
debug_color = Color(3.17663e-06, 0.585575, 0.776292, 0.42)

[node name="ClickHitbox" type="Area2D" parent="."]
position = Vector2(-32, -64)
scale = Vector2(1.03839, 0.147484)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ClickHitbox"]
position = Vector2(16.3715, 488.189)
polygon = PackedVector2Array(5.77818, -169.51, 0.96303, -27.1216, 2.88909, 135.608, 26.0018, 135.608, 27.9278, -27.1216, 23.1127, -169.51)

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_u0emo")
debug_color = Color(0, 0.398146, 0.919015, 0.42)

[node name="EnemyHealthBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -26.0
offset_right = 24.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.038, 1)
texture_under = ExtResource("2_x1rqp")
texture_progress = ExtResource("3_ubio8")
texture_progress_offset = Vector2(3, 1)
metadata/_edit_use_anchors_ = true

[node name="AttackSpeedCD" type="Timer" parent="."]
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
